--- a/src/main/resources/templates/mj/seller/management.html
+++ b/src/main/resources/templates/mj/seller/management.html
@@ -157,12 +157,13 @@
                         <div class="modal-content">
                             <div class="modal-header">
                             <h1 class="modal-title fs-5" id="staticBackdropLabel">물품삭제</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
                                 삭제할 물품을 선택해주세요.
                             </div>
                             <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
+                            <button type="submit" class="btn btn-dark" data-bs-dismiss="modal">확인</button>
                             </div>
                         </div>
                         </div>
