--- a/src/main/resources/static/css/mj/seller.css
+++ b/src/main/resources/static/css/mj/seller.css
@@ -437,3 +437,21 @@ main h3 {
 .datatable-pagination a {
     --bs-pagination-color:#0f4a7b;
 }
+
+
+/* input[type="file" i] {
+    appearance: none;
+    background-color: initial;
+    cursor: default;
+    align-items: baseline;
+    color: inherit;
+    text-overflow: ellipsis;
+    white-space: pre;
+    text-align: start !important;
+    padding: initial;
+    border: initial;
+    overflow: hidden !important;
+} */
+/* #file-upload-button {
+    background-color: #0f4a7b;
+} */
