--- a/src/main/resources/static/css/km/selectitem.css
+++ b/src/main/resources/static/css/km/selectitem.css
@@ -349,6 +349,24 @@ section
 {
 	margin-top: 12px;
 }
+.product_details h2 {
+	display: inline-block;
+}
+
+/* 찜 기능 ~ */
+.product_details .heartBtn {
+	border: none;
+	background-color: inherit;
+}
+.product_details .heartIcon {
+	height: 45px;
+	color: #ff1f1f;
+}
+/* ~ 찜 기능 */
+
+
+
+
 .free_delivery
 {
 	background: #f5f5f5;
@@ -890,11 +908,11 @@ tbody::-webkit-scrollbar-track {
 }
 
 .popup__rating label:hover {
-	text-shadow: 0 0 0 rgb(248, 239, 106); /* 마우스 호버 */
+	text-shadow: 0 0 0 rgb(238, 191, 130); /* 마우스 호버 */
 }
 
 .popup__rating label:hover ~ label{
-    text-shadow: 0 0 0 rgb(248, 239, 106); /* 마우스 호버 뒤에오는 이모지들 */
+    text-shadow: 0 0 0 rgb(238, 191, 130); /* 마우스 호버 뒤에오는 이모지들 */
 }
 
 .popup__rating fieldset{
@@ -904,7 +922,7 @@ tbody::-webkit-scrollbar-track {
 }
 
 .popup__rating input[type=radio]:checked ~ label{
-    text-shadow: 0 0 0 rgb(248, 239, 106); /* 마우스 클릭 체크 */
+    text-shadow: 0 0 0 rgb(238, 191, 130); /* 마우스 클릭 체크 */
 }
 
 .popup__comment textarea {
@@ -1013,8 +1031,7 @@ tbody::-webkit-scrollbar-track {
 
 .orderby a.active {
 	/* background-color: red; */
-	font-weight: 600;
-	border-bottom: 2px solid #6d9275;
+	border-bottom: 1px solid #6d9275;
 }
 
 /* 리뷰 조회 - 페이지네이션*/
