home화면 설정 (대충 위치잡기)

--- a/src/main/resources/templates/jk/seller/header.html
+++ b/src/main/resources/templates/jk/seller/header.html
@@ -2,7 +2,7 @@
     <!-- 네비게이션 영역 -->
     <nav class="sb-topnav navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow ">
         <!-- Navbar Brand -->
-        <a class="navbar-brand ps-3" th:href="@{home.do}">
+        <a class="navbar-brand ps-3" th:href="@{/seller/home.do}">
             <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tools"
             viewBox="0 0 16 16">
             <path
