--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -48,8 +48,8 @@
                     <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/seller/item/management.do}">등록</a>
-                            <a class="nav-link" th:href="@{/seller/item/search.do}">관리</a>
+                            <a class="nav-link" th:href="@{/seller/item/management.do}">관리</a>
+                            <a class="nav-link" th:href="@{/seller/item/search.do}">통계</a>
                         </nav>
                     </div>
 
