--- a/src/main/resources/templates/jk/seller/home.html
+++ b/src/main/resources/templates/jk/seller/home.html
@@ -40,7 +40,7 @@
                 <div class="container-fluid" style="padding: 3%;">
                     <div class="row">
                         <div class="col-md-12"
-                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-radius: 40px; background-color: #ffffff; margin-bottom: 40px;">
+                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-radius: 20px; background-color: #ffffff; margin-bottom: 40px;">
                             <p style="margin: 20px; margin-top: 40px; font-weight: 600; font-size: 35px;"><strong>상품을 바로
                                     등록할 수 있어요!</strong></p>
                             <div class="px-4 pt-4  " style="font-weight: 600;">
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="col-md-6"
-                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-radius: 40px; background-color: #ffffff; margin-bottom: 40px; ">
+                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-radius: 20px; background-color: #ffffff; margin-bottom: 40px; ">
                             <img src="https://via.placeholder.com/550x150" alt="배너 이미지"
                                 style="width: 100%; height: 100%;">
                         </div>
@@ -65,7 +65,7 @@
                     <!-- 각 화면별 상세 화면 -->
                     <div class="row mt-4">
                         <div class="col-md-6"
-                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-radius: 40px 0 0 40px; background-color: #ffffff; ">
+                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-radius: 20px 0 0 20px; background-color: #ffffff; ">
                             <p style="margin: 20px; margin-top: 40px; font-weight: 600; font-size: 28px;"><strong>지금까지
                                     아래의 상품이 가장 많이
                                     팔렸어요!</strong></p>
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                         <div class="col-md-6"
-                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-left: 0px solid rgba(255, 255, 255, 0.534); ; border-radius: 0 40px 40px 0; background-color: #ffffff;  
+                            style="border: 3px solid rgba(215, 219, 235, 0.534); border-left: 0px; border-radius: 0 20px 20px 0; background-color: #ffffff;  
                             ">
                             <p style="margin: 20px; margin-top: 40px; font-weight: 600; font-size: 26px;"><strong>이번 달에는
                                     아래 상품들이 제일 많이
