--- a/src/main/resources/templates/ikh/seller/item/search.html
+++ b/src/main/resources/templates/ikh/seller/item/search.html
@@ -358,7 +358,7 @@
 
         var ctx = document.getElementById("myBarChart2");
         var myLineChart = new Chart(ctx, {
-        type: 'horizontalBar',
+        type: 'bar',
         data: {
             labels: ["중구","서구","동구","영도구","진구","동래구","남구","북구","해운대구","사하구","금정구","강서구","연제구","수영구","사상구"],
             datasets: [{
@@ -371,7 +371,7 @@
         },
         options: {
             scales: {
-            yAxes: [{
+            xAxes: [{
                 barPercentage: 0.5, // 막대 두께 비율
                 categoryPercentage: 0.9, // 그룹(카테고리) 너비 비율
                 time: {
@@ -384,7 +384,7 @@
                 maxTicksLimit: 15
                 }
             }],
-            xAxes: [{                
+            yAxes: [{                
                 ticks: {
                 beginAtZero: true,
                 min: 0,
