--- a/src/main/resources/static/css/jk/seller.css
+++ b/src/main/resources/static/css/jk/seller.css
@@ -150,6 +150,7 @@ ul {
 .sb-nav-fixed #layoutTotal #layoutContent {
     padding-left: 225px;
     top: 56px;
+    /* background-color: #f4f7f8d8; */
 
 }
 
