--- a/src/main/resources/templates/gr/admin/login.html
+++ b/src/main/resources/templates/gr/admin/login.html
@@ -103,13 +103,13 @@
                     <a>관리자 페이지 입니다.</a>
                 </div>
                 
-                <!-- <form class="position-relative" th:action="@{/customer/loginaction.do}" method="post" id="loginFrom"> -->
+                <form class="position-relative" th:action="@{/admin/loginaction.do}" method="post" id="loginFrom">
                     <div class="content">
                         <input class="loginInput" type="text" name="id" placeholder="아이디" autofocus><br>
                         <input class="loginInput" type="password" name="pw" placeholder="암호"><br>
-                        <input class="loginInput loginBtn" type="submit" value="로그인" onclick="loginAction()">
+                        <input class="loginInput loginBtn" type="button" value="로그인" onclick="loginAction()">
                     </div>
-                <!-- </form> -->
+                </form>
             </div>
         </div>
 
@@ -122,6 +122,25 @@
 
 
     <!-- script-->
+
+    <script th:inline="javascript" type="text/javascript">
+        const loginAction = () => {
+            const id = document.querySelector("input[name='id']");
+            const pw = document.querySelector("input[name='pw']");
+            if( id.value.length  <= 0 ){
+                alert("아이디를 입력하세요");
+                id.focus();
+                return false;
+            }
+            if( pw.value.length  <= 0 ){
+                alert("암호를 입력하세요");
+                pw.focus();
+                return false;
+            }
+
+            document.querySelector('#loginFrom').submit();
+        }
+    </script>
 
 </body>
 </html>
