--- a/src/main/resources/static/css/mj/seller.css
+++ b/src/main/resources/static/css/mj/seller.css
@@ -414,7 +414,7 @@ main h3 {
 /* 일괄수정, 일괄삭제, 물품등록 버튼 */
 .btn-find {
 
-    display: inline-block;
+    /* display: inline-block; */
     width :84.25px;
 }
 
